Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Fixed
~~~~~

- Fixed issue when creating objects with a space in the label, the object would
  be created but the uri with the label (and spaces) would not work, making the
  return object useless. Now it updates the URI to use the generated ID if
  possible avoiding the issue.

0.3.24 - 2020-06-19
-------------------

Fixed
~~~~~

- Stupid import bug in previous release

0.3.23 - 2020-06-19
-------------------

Improved
~~~~~~~~

- Connections now check if they are still valid and will raise an appropriate
  error if they are closed. This avoid strange errors when trying to use a
  connection after ``.disconnect`` has been called.
- Avoid warning about collections.abc use on Python 3.7+

0.3.22 - 2020-02-26
-------------------

Added
~~~~~

- The ``services.import_dir`` function to import a local directory into XNAT.
  The function will automatically zip the contents in a temporary file (or
  memory if desired) before upload.

Changed
~~~~~~~

- Updated documentation and setup to refer to new gitlab repository instead
  of bitbucket, finalizing the move
- Add a default timeout of 300 seconds (5 minutes) to all requests to avoid
  stale connections blocking the entire code (without error, just infinite
  hangs). Can be changed when connecting or in the XNATSession object
  afterwards. Note that the 300 seconds is not the total duration of the
  request allowed, but means that after there is nothing received 300 seconds
  the connection is considered timed-out, a download that takes 10 minutes
  would still be possible.

Improved
~~~~~~~~

- The ``import_`` function is more resilient. On windows programs like 7zip could
  mess with the mimetypes and cause zip files get a different estimated